--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,9 @@ build = "python main.py"
 [dev-packages]
 
 [packages]
-requests = "2.25.1"
-feedparser = "6.0.2"
-pytz = "2020.5"
+requests = "==2.25.1"
+feedparser = "==6.0.2"
+pytz = "==2020.5"
 
 [requires]
 python_version = "*"
